--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Added favicon -->
+    <link rel="shortcut icon" href="./assets//icons/favicon.png" type="image/x-icon">
+
+    <!-- Added external css -->
     <link rel="stylesheet" href="./css/style.css">
+
+    <!-- Added title -->
     <title>Donate Today</title>
 </head>
 <body>
