--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +15,19 @@
     <!-- Added title -->
     <title>Donate Today</title>
 </head>
+
 <body>
-    <h1>Donate Today</h1>
+    <section class="flexible-container">
+        <div class="donate-banner">
+            <img src="./assets/images/donation5.jpg" alt="">
+            <div class="centered">
+                <h1>Let's Help Those Who Are More In Need</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim</p>
+                    <a class="link-button" href="#">Explore Now</a>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
