donate banner added

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <body>
     <section class="flexible-container">
         <div class="donate-banner">
-            <img src="./assets/images/donation5.jpg" alt="">
+            <img src="./assets/images/donation-bg.jpg" alt="">
             <div class="centered">
                 <h1>Let's Help Those Who Are More In Need</h1>
                 <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
                     animal noluisse, enim</p>
-                    <a class="link-button" href="#">Explore Now</a>
+                    <a class="link-button" href="#">Donate Now</a>
             </div>
         </div>
     </section>
