donate amount added[

--- a/index.html
+++ b/index.html
@@ -28,6 +28,25 @@
             </div>
         </div>
     </section>
+
+    <section class="flexible-container">
+        <div class="donate-desc">
+            <h1>Donate Today</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="donate-amount">
+                <button>100tk</button>
+                <button>200tk</button>
+                <button>500tk</button>
+                <button>1000tk</button>
+                <button>5000tk</button>
+            </div>
+            <div class="other">
+                <p>Other Amount (Taka)</p>
+                <hr>
+                <a class="donate-button" href="#">Donate Now</a>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
