donate plan added

--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
                 <h1>Let's Help Those Who Are More In Need</h1>
                 <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
                     animal noluisse, enim</p>
-                    <a class="link-button" href="#">Donate Now</a>
+                <a class="link-button" href="#">Donate Now</a>
             </div>
         </div>
     </section>
 
-    <section class="flexible-container">
+    <section>
         <div class="donate-desc">
             <h1>Donate Today</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
             <div class="donate-amount">
                 <button>100tk</button>
                 <button>200tk</button>
@@ -44,6 +45,43 @@
                 <p>Other Amount (Taka)</p>
                 <hr>
                 <a class="donate-button" href="#">Donate Now</a>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="donate_plan">
+        <h1 class="donate-plan">Our Donate Plan</h1>
+        <p class="donate-plann-p">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal
+            noluisse, enim</p>
+        <div class="flexible-container" style="display: flex; margin: 0 auto;">
+            <div id="food" class="half-width">
+                <div class="plan">
+                    <img src="./assets//icons/food.png" alt="" />
+                </div>
+                <h2>Food for a family</h2>
+                <p>
+                    My mission is to provide customer-centric, result-oriented, cost-competitive innovative & functional
+                    Website to our valuable global clients.
+                </p>
+            </div>
+            <div id="shelter" class="half-width">
+                <div class="plan">
+                    <img src="./assets/icons/shelter.png" alt="" />
+                    <h2>Shelter for a family</h2>
+                    <p>
+                        I consistently work on omy development process to provide an informative, user-friendly and
+                        effective strategy with the message.
+                    </p>
+                </div>
+            </div>
+            <div id="education" class="half-width">
+                <div class="plan">
+                    <img src="./assets//icons/Frame-1.png" alt="" />
+                    <h2>Education for a child</h2>
+                    <p>To gain confidence using my potential in the field of Web Development and express my
+                        innovative creative skills for company growth.</p>
+                </div>
             </div>
         </div>
     </section>
