--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 
     <section class="donate_plan">
         <h1 class="donate-plan">Our Donate Plan</h1>
-        <p class="donate-plann-p">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal
+        <p class="donate-plann-p">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.
+            No duo populo animal
             noluisse, enim</p>
         <div class="flexible-container" style="display: flex; margin: 0 auto;">
             <div id="food" class="half-width">
@@ -85,6 +86,12 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer Part -->
+    <footer>
+        <h1>Donate Today</h1>
+        <p>I'm gonna do it</p>
+    </footer>
 </body>
 
 </html>
