donation page added

--- a/index.html
+++ b/index.html
@@ -87,6 +87,44 @@
         </div>
     </section>
 
+
+    <section class="flexible-container" style="display: flex;">
+        <div class="half-width">
+            <h1 class="donation-page-text">Their lives depend on your donation</h1>
+            <p class="para-text">
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim <br>
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.
+            </p>
+
+            <a class="link-button" href="#">How to Contribute?</a>
+        </div>
+        <div class="half-width donation-page">
+            <img src="./assets/images/donation8.jpg" alt="" />
+        </div>
+    </section>
+
+
+    <section class="contact-container">
+        <div class="input-image">
+            <img class="contact-img" src="./assets//icons/contact.png" alt="" />
+        </div>
+
+        <div class="half-width form-area">
+            <h1 class="contact-page-text">Contact With Me</h1>
+            <form>
+                <label>Your name:</label><br>
+                <input class="input-form" name="name"><br>
+                <label>Your Email:</label><br>
+                <input class="input-form" name="email"><br>
+                <label>Your Message:</label><br>
+                <input class="input-form-text-area" name="textarea"><br><br>
+                <input id="send-btn" class="link-button" type="button" value="Send">
+            </form>
+
+        </div>
+    </section>
+
     <!-- Footer Part -->
     <footer>
         <h1>Donate Today</h1>
