--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
 
 
-    <section class="flexible-container" style="display: flex;">
+    <section style="display: flex;">
         <div class="half-width">
             <h1 class="donation-page-text">Their lives depend on your donation</h1>
             <p class="para-text">
@@ -101,6 +101,17 @@
         </div>
         <div class="half-width donation-page">
             <img src="./assets/images/donation8.jpg" alt="" />
+        </div>
+    </section>
+
+    <section class="update-container">
+        <div class="update-text">
+            <h1>Get My Updates</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="email-input">
+            <input type="email" name="email" id="" placeholder="Email">
+            <input type="button" value="Subscribbe">
         </div>
     </section>
 
