--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p class="donate-plann-p">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.
             No duo populo animal
             noluisse, enim</p>
-        <div class="flexible-container" style="display: flex; margin: 0 auto;">
+        <div style="display: flex; margin: 0 auto; height: 500px;">
             <div id="food" class="half-width">
                 <div class="plan">
                     <img src="./assets//icons/food.png" alt="" />
@@ -104,10 +104,28 @@
         </div>
     </section>
 
+
+    <section style="display: flex;">
+        <div class="half-width donation-page">
+            <img src="./assets/images/donation0.jpg" alt="" />
+        </div>
+        <div class="half-width">
+            <h1 class="donation-page-text">They need us to suvive</h1>
+            <p class="para-text">
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim <br>
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.
+            </p>
+
+            <a class="link-button" href="#">How to Contribute?</a>
+        </div>
+    </section>
+
+
     <section class="update-container">
         <div class="update-text">
             <h1>Get My Updates</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
         </div>
         <div class="email-input">
             <input type="email" name="email" id="" placeholder="Email">
