--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- Donate Banner -->
     <section class="flexible-container">
         <div class="donate-banner">
             <img src="./assets/images/donation-bg.jpg" alt="">
@@ -29,6 +30,7 @@
         </div>
     </section>
 
+    <!-- Donate Description with amount -->
     <section>
         <div class="donate-desc">
             <h1>Donate Today</h1>
@@ -49,7 +51,7 @@
         </div>
     </section>
 
-
+    <!-- Donate Plan -->
     <section class="donate_plan">
         <h1 class="donate-plan">Our Donate Plan</h1>
         <p class="donate-plann-p">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.
@@ -88,6 +90,7 @@
     </section>
 
 
+    <!-- Donate Description 1 -->
     <section style="display: flex;">
         <div class="half-width">
             <h1 class="donation-page-text">Their lives depend on your donation</h1>
@@ -105,6 +108,7 @@
     </section>
 
 
+    <!-- Donate Description 2 -->
     <section style="display: flex;">
         <div class="half-width donation-page">
             <img src="./assets/images/donation0.jpg" alt="" />
@@ -112,7 +116,8 @@
         <div class="half-width">
             <h1 class="donation-page-text">They need us to suvive</h1>
             <p class="para-text">
-                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim <br>
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim <br>
                 Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.
             </p>
 
@@ -120,7 +125,7 @@
         </div>
     </section>
 
-
+    <!-- My Updates -->
     <section class="update-container">
         <div class="update-text">
             <h1>Get My Updates</h1>
@@ -134,6 +139,7 @@
     </section>
 
 
+    <!-- Contact Form -->
     <section class="contact-container">
         <div class="input-image">
             <img class="contact-img" src="./assets//icons/contact.png" alt="" />
