finish the assignment

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <img src="./assets/images/donation-bg.jpg" alt="">
             <div class="centered">
                 <h1>Let's Help Those Who Are More In Need</h1>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                    animal noluisse, enim</p>
+                <p>Millions of families of flood affected every year. Help us provide them with enough shelter & eat.
+                </p>
                 <a class="link-button" href="#">Donate Now</a>
             </div>
         </div>
@@ -34,8 +34,7 @@
     <section>
         <div class="donate-desc">
             <h1>Donate Today</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim</p>
+            <p>Give today to help end hunger. Help us from flood disaster.</p>
             <div class="donate-amount">
                 <button>100tk</button>
                 <button>200tk</button>
@@ -54,9 +53,8 @@
     <!-- Donate Plan -->
     <section class="donate_plan">
         <h1 class="donate-plan">Our Donate Plan</h1>
-        <p class="donate-plann-p">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.
-            No duo populo animal
-            noluisse, enim</p>
+        <p class="donate-plann-p">There are three types of donation plan in our list to help the flood disasters & stand
+            beside them.</p>
         <div style="display: flex; margin: 0 auto; height: 500px;">
             <div id="food" class="half-width">
                 <div class="plan">
@@ -64,8 +62,9 @@
                 </div>
                 <h2>Food for a family</h2>
                 <p>
-                    My mission is to provide customer-centric, result-oriented, cost-competitive innovative & functional
-                    Website to our valuable global clients.
+                    Safe food and water supplies are a major concern following a natural disaster such as a tornado,
+                    flood, hurricane or blizzard. Texas families who live in disaster-prone areas may benefit from being
+                    prepared in the event of disaster
                 </p>
             </div>
             <div id="shelter" class="half-width">
@@ -73,8 +72,10 @@
                     <img src="./assets/icons/shelter.png" alt="" />
                     <h2>Shelter for a family</h2>
                     <p>
-                        I consistently work on omy development process to provide an informative, user-friendly and
-                        effective strategy with the message.
+                        Flood shelters are strong elevated structures that can be used by local residents for refuge
+                        during an
+                        extreme weather event. For a timely response, flood forecasting and warning systems should
+                        complement shelters.
                     </p>
                 </div>
             </div>
@@ -82,8 +83,9 @@
                 <div class="plan">
                     <img src="./assets//icons/Frame-1.png" alt="" />
                     <h2>Education for a child</h2>
-                    <p>To gain confidence using my potential in the field of Web Development and express my
-                        innovative creative skills for company growth.</p>
+                    <p>Within academia there is ongoing discussion over what constitutes natural disaster or what does
+                        not. Floods, which in recent years have taken the world by surprise, come into the discussion
+                        too.</p>
                 </div>
             </div>
         </div>
@@ -95,12 +97,12 @@
         <div class="half-width">
             <h1 class="donation-page-text">Their lives depend on your donation</h1>
             <p class="para-text">
-                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim <br>
-                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.
+                Floods have large social consequences for communities and individuals. As most people are well aware,
+                the immediate impacts of flooding include loss of human life, damage to property, destruction of crops,
+                loss of livestock, and deterioration of health conditions owing to waterborne diseases.
             </p>
 
-            <a class="link-button" href="#">How to Contribute?</a>
+            <a class="donate-button" href="#">How to Contribute?</a>
         </div>
         <div class="half-width donation-page">
             <img src="./assets/images/donation8.jpg" alt="" />
@@ -116,12 +118,14 @@
         <div class="half-width">
             <h1 class="donation-page-text">They need us to suvive</h1>
             <p class="para-text">
-                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim <br>
-                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.
+                When a flood warning is issued for their area, evacuate. Head for higher ground and stay there until you
+                are told that the area is safe. <br>
+
+                If you have time prior to evacuation, secure your home. Bring in outdoor furniture. Move essential items
+                to the highest part of the upper floor of your home.
             </p>
 
-            <a class="link-button" href="#">How to Contribute?</a>
+            <a class="donate-button" href="#">How to Contribute?</a>
         </div>
     </section>
 
@@ -129,8 +133,7 @@
     <section class="update-container">
         <div class="update-text">
             <h1>Get My Updates</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim</p>
+            <p>To get updates you need to subscribe our maillist. Please stay with us.</p>
         </div>
         <div class="email-input">
             <input type="email" name="email" id="" placeholder="Email">
